// Copyright 2019 Luis Guill√©n Civera <luisguillenc@gmail.com>. View LICENSE.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package luids.dnsutil.v1;
option go_package = "github.com/luids-io/api/dnsutil/grpc/pb";

service ResolvCollect {
    rpc Collect (ResolvCollectRequest) returns (google.protobuf.Empty) {}
}

service ResolvCheck {
    rpc Check (ResolvCheckRequest) returns (ResolvCheckResponse) {}
}

message ResolvCollectRequest {
    string client_ip = 1;
    string name      = 2;
    repeated string resolved_ips = 3;
}

message ResolvCheckRequest {
    string client_ip   = 1;
    string resolved_ip = 2;
    string name        = 3;
}

message ResolvCheckResponse {
    bool result = 1;
    google.protobuf.Timestamp last_ts  = 2; 
    google.protobuf.Timestamp store_ts = 3; 
}

